# log-analyzer

./: .coverage  .coveragerc  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-tests.yml  tests.yml
log_analyzer/: analyzer.py  analyzer_old.py  config.py  config_loader.py  console.py  constants.py  container.py  exceptions.py  formatter.py  loader.py  logger.py  main.py  models.py  parser.py  processor.py  protocols.py  saver.py  summarizer.py
logs/: sample.txt
tests/: test_analyzer.py  test_cli.py  test_config.py  test_config_loader.py  test_container.py  test_factory.py  test_formatter.py  test_loader.py  test_logger.py  test_main.py  test_parser.py  test_processor.py  test_saver.py  test_summarizer.py
tests/fakes/: fake_formatter.py  fake_loader.py  fake_parser.py
