[project]
name = "log-analyzer"
version = "1.0.0"
description = "CLI tool to analyze log files and generate reports"
authors = [{ name = "Alexander Mentyu" }]
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
log-analyzer = "log_analyzer.main:main"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["F", "I"]

[tool.black]
target-version = ["py311"]

[tool.setuptools.packages.find]
include = ["log_analyzer*"]
exclude = ["logs*", "reports*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]
